@@ -124,6 +124,7 @@ Bill Tompkins
 Tom Tromey
 Chris Toshok
 Junichi Uekawa
+David Vermeille
 Bjoern Voigt
 Nathan Walp
 Eric Warmenhoven
